Require a competition ID for many handlers.

--- a/server/src/main/java/org/cubingusa/techcubing/templates/index.html
+++ b/server/src/main/java/org/cubingusa/techcubing/templates/index.html
@@ -3,27 +3,18 @@
   <title>Welcome!</title>
 </head>
 <body>
-  <#if hasCompetitionId >
-    <h1>${competitionId}</h1>
-  <#else>
-    <h1>TechCubing</h1>
-    <p>
-      No competition is selected.
-    </p>
-  </#if>
+  <h1>TechCubing &mdash; ${competitionId}</h1>
   <h3>Links</h3>
   <ul>
     <li>
       <a href="/competitions">Select a competition</a>
     </li>
-    <#if hasCompetitionId >
-      <li>
-        <a href="/set_competition?id=${competitionId}">Refresh competition data</a>
-      </li>
-      <li>
-        <a href="/manage_devices">Manage devices</a>
-      </li>
-    </#if >
+    <li>
+      <a href="/set_competition?id=${competitionId}">Refresh competition data</a>
+    </li>
+    <li>
+      <a href="/manage_devices">Manage devices</a>
+    </li>
   </ul>
 </body>
 </html>
