--- a/src/main/java/com/techcubing/android/res/layout/activity_judge.xml
+++ b/src/main/java/com/techcubing/android/res/layout/activity_judge.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.techcubing.android.activities.SetupActivity">
+    android:orientation="vertical"
+    tools:context="com.techcubing.android.activities.JudgeActivity">
 
-    <Button
-        android:id="@+id/lobby_scan_scorecard_button"
+    <TextView
+        android:id="@+id/judge_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
-        android:textAlignment="center"
-        android:text="Scan a scorecard" />
+        android:textAlignment="center" />
     <Button
-        android:id="@+id/scramble_release_button"
+        android:id="@+id/judge_release_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
