Add a (mostly empty) handler for managing scrambles.

--- a/src/main/java/com/techcubing/server/templates/index.html
+++ b/src/main/java/com/techcubing/server/templates/index.html
@@ -15,6 +15,9 @@
     <li>
       <a href="/manage_devices">Manage devices</a>
     </li>
+    <li>
+      <a href="/manage_scrambles">Manage scrambles</a>
+    </li>
   </ul>
 </body>
 </html>
