Import scrambles from the TNoodle output.

--- a/src/main/java/com/techcubing/server/templates/manage_scrambles.html
+++ b/src/main/java/com/techcubing/server/templates/manage_scrambles.html
@@ -4,8 +4,8 @@
 </head>
 <body>
   <h1>Scrambles</h1>
-  <h2>Import Scrambles</h2>
-  <form action="/import_scrambles" method="POST">
+  <h2>Add Scrambles</h2>
+  <form action="/add_scrambles" method="POST" enctype="multipart/form-data">
     <div>
       <input type="file"
              name="scramble_file"
