--- a/app/src/main/res/layout/generic_failure.xml
+++ b/app/src/main/res/layout/generic_failure.xml
@@ -3,23 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.techcubing.android.activities.AcquireScorecardActivity">
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/failure_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
-        android:textAlignment="center"
-        android:text="Failed to acquire scorecard:"/>
+        android:textAlignment="center"/>
     <TextView
-        android:id="@+id/acquire_scorecard_failure_reason"
+        android:id="@+id/failure_reason"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
         android:textAlignment="center"/>
     <Button
-        android:id="@+id/acquire_scorecard_failure_button"
+        android:id="@+id/failure_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
