Improved scrambling flow.
-Expand the scramble check box, since the closer the cube is to the
camera, the less light interferes.
-Change clustering algorithm to take into account the expected scramble
state.
-Add a button on ScrambleActivity to check the scramble.
-Release scorecard when it's checked.

--- a/app/src/main/res/layout/activity_scramble.xml
+++ b/app/src/main/res/layout/activity_scramble.xml
@@ -7,18 +7,33 @@
     tools:context="com.techcubing.android.activities.ScrambleActivity">
 
     <TextView
-        android:id="@+id/scramble_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Scramble"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:layout_weight="0.15"
+        android:background="#eeeeee"/>
+    <TextView
+        android:id="@+id/scramble_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:padding="2dp"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="40sp"
+        android:fontFamily="serif-monospace"
+        android:textStyle="bold"
+        android:layout_weight="0.7"
+        android:gravity="center" />
 
     <Button
         android:id="@+id/scramble_check_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:padding="2dp"
         android:text="Check Scramble"
+        android:layout_weight="0.15"
         android:textAlignment="center" />
 
 </LinearLayout>
