--- a/src/main/java/com/techcubing/server/templates/index.html
+++ b/src/main/java/com/techcubing/server/templates/index.html
@@ -18,6 +18,9 @@
     <li>
       <a href="/manage_scrambles">Manage scrambles</a>
     </li>
+    <li>
+      <a href="/admin_results">Admin results view</a>
+    </li>
   </ul>
 </body>
 </html>
