--- a/src/main/java/com/techcubing/server/templates/admin_results.html
+++ b/src/main/java/com/techcubing/server/templates/admin_results.html
@@ -1,6 +1,16 @@
 <html>
 <head>
   <title>Welcome!</title>
+  <style type="text/css">
+    table {
+      border-collapse: collapse;
+      border: 1px solid black;
+    }
+    td,th {
+      border: 1px solid black;
+      padding: 5px;
+    }
+  </style>
 </head>
 <body>
   <h1>TechCubing &mdash; ${competitionId}</h1>
@@ -25,6 +35,51 @@
   </div>
   <#if activeRound??>
     <h3>${activeEvent.id} Round ${activeRound.roundNumber}</h3>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>1</th>
+        <th>2</th>
+        <th>3</th>
+        <th>4</th>
+        <th>5</th>
+      </tr>
+      <#list scorecards as scorecard>
+        <#assign person = persons[scorecard.personId]>
+        <tr>
+          <td>
+            ${person.name}
+          </td>
+          <#list scorecard.attemptsList as attempt>
+            <td>
+              <#if attempt.result.finalTime != 0>
+                ${attempt.result.finalTime?c}
+              <#else>
+                <#assign lastPart = "">
+                <#list attempt.partsList as part>
+                  <#if (part.outcome == "UNKNOWN" || part.outcome == "OK") &&
+                       part.deviceId != "" >
+                    <#assign lastPart = part>
+                  </#if>
+                </#list>
+                <#if lastPart != "">
+                  <#assign device = devices[lastPart.deviceId]>
+                  <#if device.type == "JUDGE">
+                    Solving at ${device.visibleName}
+                  <#elseif device.type == "SCRAMBLE">
+                    <#if lastPart.outcome == "UNKNOWN">
+                      Scrambling at ${device.visibleName}
+                    <#else>
+                      Scrambled
+                    </#if>
+                  </#if>
+                </#if>
+              </#if>
+            </td>
+          </#list>
+        </tr>
+      </#list>
+    </table>
   </#if>
   <script type="application/javascript">
     document.getElementById('round_select').onchange = function() {
