Use the event name in the title.

--- a/src/main/java/com/techcubing/server/templates/admin_results.html
+++ b/src/main/java/com/techcubing/server/templates/admin_results.html
@@ -34,7 +34,7 @@
     </select>
   </div>
   <#if activeRound??>
-    <h3>${activeEvent.id} Round ${activeRound.roundNumber}</h3>
+    <h3>${activeEvent.eventName} Round ${activeRound.roundNumber}</h3>
     <table>
       <tr>
         <th>Name</th>
