--- a/app/src/main/res/layout/activity_scramble_check.xml
+++ b/app/src/main/res/layout/activity_scramble_check.xml
@@ -1,73 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:keepScreenOn="true"
     xmlns:camerakit="http://schemas.android.com/apk/res-auto"
     tools:context="com.techcubing.android.activities.ScrambleCheckActivity">
 
-    <FrameLayout
+
+    <com.wonderkiln.camerakit.CameraView
+        android:id="@+id/scramble_check_camera"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        camerakit:ckFlash="off"
+        camerakit:ckMethod="still"
+        camerakit:ckPermissions="lazy"
+        camerakit:ckFacing="front"
+        camerakit:ckCropOutput="true" />
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.wonderkiln.camerakit.CameraView
-            android:id="@+id/scramble_check_camera"
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/scramble_check_guide"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            camerakit:ckFlash="off"
-            camerakit:ckMethod="still"
-            camerakit:ckPermissions="lazy"
-            camerakit:ckFacing="front"
-            camerakit:ckCropOutput="true" />
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"
+            android:padding="10dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/scramble_check_guide"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintDimensionRatio="1:1"
-                android:padding="10dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:src="@drawable/scramble_check_square_guide"/>
-        </android.support.constraint.ConstraintLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:visibility="invisible"
-                android:layout_weight="0.8"/>
-            <LinearLayout
-                android:id="@+id/scramble_check_diagram_container"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.2"
-                android:orientation="horizontal"/>
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/scramble_check_next_face_instructions"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#00ff00"
-            android:textSize="40sp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:fontFamily="serif-monospace"
-            android:textStyle="bold"
-            android:visibility="gone"/>
+            android:layout_height="0dp"
+            android:visibility="invisible"
+            android:layout_weight="0.8"/>
+        <LinearLayout
+            android:id="@+id/scramble_check_diagram_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"
+            android:orientation="horizontal"/>
+    </LinearLayout>
 
-    </FrameLayout>
+    <TextView
+        android:id="@+id/scramble_check_next_face_instructions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00ff00"
+        android:textSize="40sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:fontFamily="serif-monospace"
+        android:textStyle="bold"
+        android:visibility="gone"/>
 
-</LinearLayout>
+</FrameLayout>
