--- a/app/src/main/res/layout/activity_scramble_check.xml
+++ b/app/src/main/res/layout/activity_scramble_check.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
@@ -19,19 +18,11 @@
         camerakit:ckFacing="front"
         camerakit:ckCropOutput="true" />
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/scramble_check_guide"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="1:1"
-            android:padding="10dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/scramble_check_guide_container"
+        android:orientation="vertical"/>
 
     <LinearLayout
         android:layout_width="match_parent"
