Don't use reflection to get enum value.
Just use the int value, and convert that.  It's cleaner.

--- a/src/main/java/com/techcubing/server/templates/manage_devices.html
+++ b/src/main/java/com/techcubing/server/templates/manage_devices.html
@@ -32,7 +32,7 @@
         <div>Type of device:</div>
         <select name="deviceType">
           <#list devicesByType as deviceType, devices>
-            <option>${deviceType}</option>
+            <option value="${deviceType.number}">${deviceType}</option>
           </#list>
         </select>
       </p>
