Add a button to the lobby to release device.

--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -3,8 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.techcubing.android.activities.SetupActivity">
+    tools:context="com.techcubing.android.activities.SetupActivity"
+    android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/lobby_staff_name"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:gravity="center"
+        android:textSize="24sp"/>
     <Button
         android:id="@+id/lobby_scan_scorecard_button"
         android:layout_width="match_parent"
@@ -13,11 +21,11 @@
         android:textAlignment="center"
         android:text="Scan a scorecard" />
     <Button
-        android:id="@+id/scramble_release_button"
+        android:id="@+id/lobby_log_out_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
         android:textAlignment="center"
-        android:text="Finish" />
+        android:text="Log out" />
 
 </LinearLayout>
